styles/default.css
:root {
  --HEX2: #222222;
  --HEX7: #777777;
  --HEX8: #888888;
  --HEXA: #AAAAAA;
  --HEXD: #DDDDDD;
  --HEXE: #EEEEEE;
  --HEXF: #FFFFFF;
}

@media (prefers-color-scheme: dark) {
  :root {
    --HEX2: #FFFFFF;
    --HEX7: #AAAAAA;
    --HEX8: #999999;
    --HEXA: #777777;
    --HEXD: #444444;
    --HEXE: #333333;
    --HEXF: #222222;
  }
}

html {
  font-family: 'Noto Serif', serif;
  font-size: 20px;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  overflow-y: scroll;
}

body {
  margin: 0rem;
  line-height: 1.5em;
  color: var(--HEX2);
  background-color: var(--HEXF);
}

* {
  margin: 0rem;
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Noto Sans', sans-serif;
  font-weight: 700;
  line-height: 1.2em;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.6rem;
}

h3 {
  font-size: 1.3rem;
}

h4 {
  font-size: 1rem;
}

h5,
h6 {
  font-size: 0.8rem;
}

h6 {
  color: var(--HEX7);
}

hr {
  height: 0.1rem;
  background-color: var(--HEXE);
  border: 0rem;
}

a {
  color: var(--HEX2);
  text-decoration: none;
  cursor: pointer;
}

img {
  max-width: 100%;
  height: auto;
}

svg {
  width: auto;
  height: 1rem;
  fill: currentcolor;
}

time {
  color: var(--HEXA);
}

time + time:before {
  content: '\00B7';
  margin: 0px 5px;
}

code,
pre {
  background-color: var(--HEXE);
}

code {
  display: inline-block;
  padding: 0.2rem 0.4rem;
  font-size: 0.8rem;
  line-height: 1.2em;
  white-space: nowrap;
  vertical-align: text-bottom;
}

pre {
  padding: 0.8rem 1.1rem;
  overflow: auto;
}

pre code {
  padding: 0em;
  line-height: 1.5em;
  white-space: pre;
}

blockquote {
  margin: 1rem 0rem 0rem;
  padding-left: 1rem;
  color: var(--HEX8);
  border-left: 0.1rem solid var(--HEXD);
}

section {
  width: 100%;
  max-width: 740px;
  margin: 0rem auto;
  padding: 2.5rem;
}

section > *:not(:first-child) {
  margin-top: 4rem;
}

header,
aside,
footer {
  display: flex;
  line-height: 1em;
  align-items: center;
  justify-content: space-between;
}

header > a {
  display: inline-block;
  margin: 0.5rem 0rem;
  font-size: 1.4rem;
}

header > nav {
  display: flex;
  margin-right: -0.5rem;
}

header > nav a {
  margin: 0.5rem;
  color: var(--HEX7);
}

header > nav svg {
  color: var(--HEX2);
}

article *:first-child {
  margin-top: 0em;
}

article h1,
article h2,
article h3,
article h4,
article h5,
article h6,
article hr,
article ul,
article ol,
article p,
article pre {
  margin-top: 1rem;
}

article ul > *:not(li) + li,
article ol > *:not(li) + li {
  margin-top: 1rem;
}

article a {
  text-decoration: underline;
}

article:not(:first-of-type) {
  margin-top: 3rem;
  padding-top: 3rem;
  border-top: 0.1rem solid var(--HEXE);
}

aside > *:first-child,
aside > *:last-child {
  margin-top: -0.2em;
  font-family: 'Noto Sans', sans-serif;
  font-size: 2rem;
}

aside > nav {
  display: flex;
  margin: 0rem 1.5rem;
  font-size: 1rem;
  flex-wrap: wrap;
  justify-content: center;
}

aside > nav * {
  margin: 0.5rem;
}

aside span {
  color: var(--HEXA);
}

footer > p {
  margin: 0.5rem 0rem;
  color: var(--HEXA);
}

@media screen and (max-width: 900px) {
  section {
    max-width: 640px;
  }
  @media screen and (max-width: 700px) {
    html {
      font-size: 18px;
    }

    @media screen and (max-width: 500px) {
      header,
      footer {
        flex-flow: column;
      }

      header > nav {
        margin-top: 1rem;
        margin-right: 0rem;
      }

      @media screen and (max-width: 400px) {
        html {
          font-size: 16px;
        }
      }
    }
  }
}

@media screen and (min-width: 1101px) {
  html {
    font-size: 22px;
  }

  section {
    max-width: 840px;
  }

  @media screen and (min-width: 1301px) {
    html {
      font-size: 24px;
    }

    section {
      max-width: 940px;
    }
  }
}

